--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:h2:mem:passengers-db
-spring.datasource.username=sa
-spring.datasource.password=sa
+#spring.datasource.username=sa
+#spring.datasource.password=sa
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
